erDiagram
    %% Patron-related entities
    ORDER {
        order_id INT PK
        scheduled_at DATETIME
        table_number INT
        status VARCHAR
        priority INT
        created_at DATETIME
        updated_at DATETIME
        special_requests TEXT
        patron_id INT FK
    }

    DISH {
        dish_id INT PK
        name VARCHAR UK
        description TEXT
        price FLOAT
        image_name VARCHAR
        station VARCHAR
        category VARCHAR
        preparation_time INT
    }
    PATRON ||--|| ORDER : Places
    ORDER ||--|{ DISH : Contains